workloads/domains/info/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: info-api
  namespace: info
  labels:
    app: info-api
    tier: business-logic
    domain: info
spec:
  type: NodePort
  selector:
    app: info-api
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
