workloads/domains/info/base/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: info-api
  namespace: info
spec:
  host: info-api.info.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      http:
        h2UpgradePolicy: UPGRADE
        http1MaxPendingRequests: 100
        http2MaxRequests: 1000
        maxRequestsPerConnection: 100
  subsets:
  - name: stable
    labels:
      version: v1
  - name: canary
    labels:
      version: v2
